force-app/main/default/objects/Transaction_Dispute__c/Transaction_Dispute__c.object-meta.xml
<CustomObject>
    <label>Transaction Dispute</label>
    <pluralLabel>Transaction Disputes</pluralLabel>
    <nameField>
        <label>Dispute Number</label>
        <type>AutoNumber</type>
        <displayFormat>TD-{000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>