force-app/main/default/objects/Transaction_Dispute__c/fields/Card_Last4__c.field-meta.xml
<CustomField>
    <fullName>Card_Last4__c</fullName>
    <label>Card_Last4</label>
    <type>Text</type>
    <length>4</length>
</CustomField>