force-app/main/default/objects/Transaction_Dispute__c/fields/Card_Present__c.field-meta.xml
<CustomField>
    <fullName>Card_Present__c</fullName>
    <label>Card_Present</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>