force-app/main/default/objects/Transaction_Dispute__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Transaction_Disputes</relationshipName>
</CustomField>