force-app/main/default/objects/Transaction_Dispute__c/fields/Escalation_Case__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Case__c</fullName>
    <label>Escalation_Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipName>Disputes</relationshipName>
</CustomField>