force-app/main/default/objects/Transaction_Dispute__c/fields/Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Filed_Date__c</fullName>
    <label>Filed_Date</label>
    <type>DateTime</type>
</CustomField>