force-app/main/default/objects/Transaction_Dispute__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason_Code</label>
    <type>Text</type>
    <length>40</length>
</CustomField>