force-app/main/default/objects/Transaction_Dispute__c/fields/SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_Date__c</fullName>
    <label>SLA_Due_Date</label>
    <type>Date</type>
</CustomField>